# program_engineering

1 лаба/: отчет1.docx
2 лаба/: отчет2.docx
3 лаба/: отчет3.docx
3 лаба/Str_Project/Str_App/: App.1  App.cpp  CMakeLists.txt  Str_App.vcxproj  Str_App.vcxproj.filters  makefile
3 лаба/Str_Project/Str_App/Debug/: Str_App.exe.recipe  vc142.idb
3 лаба/Str_Project/Str_App/Debug/Str_App.tlog/: CL.command.1.tlog  CL.read.1.tlog  Str_App.lastbuildstate
3 лаба/Str_Project/Str_App/x64/Debug/: App.exe.recipe  App.ilk  Str_App.exe.recipe  Str_App.ilk  vc142.idb
3 лаба/Str_Project/Str_App/x64/Debug/App.tlog/: CL.read.1.tlog  link.read.1.tlog  link.write.1.tlog
3 лаба/Str_Project/Str_App/x64/Debug/Str_App.tlog/: Str_App.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
3 лаба/Str_Project/TextOperations/: CMakeLists.txt  Library.cpp  Meo.h  TextOperations.lib  TextOperations.vcxproj  TextOperations.vcxproj.filters  makefile
3 лаба/Str_Project/TextOperations/Debug/: TextOperations.dll.recipe
3 лаба/Str_Project/TextOperations/Debug/TextOperations.tlog/: CL.command.1.tlog  CL.write.1.tlog  TextOperations.write.1u.tlog  link.read.1.tlog
3 лаба/Str_Project/TextOperations/x64/Debug/: LibDir.dll.recipe  TextOperations.dll.recipe  TextOperations.ilk  vc142.idb
3 лаба/Str_Project/TextOperations/x64/Debug/LibDir.tlog/: CL.write.1.tlog  LibDir.write.1u.tlog  link.read.1.tlog  link.write.1.tlog
3 лаба/Str_Project/TextOperations/x64/Debug/TextOperations.tlog/: CL.read.1.tlog  link.command.1.tlog  link.write.1.tlog
4 лаба/: отчет4.docx
(+60 files in other folders)
